--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@capacitor/camera": "^5.0.6",
     "@capacitor/core": "5.2.2",
     "@capacitor/filesystem": "^5.1.1",
+    "@capacitor/geolocation": "^5.0.6",
+    "@capacitor/google-maps": "^5.2.2",
     "@capacitor/haptics": "5.0.6",
     "@capacitor/keyboard": "5.0.6",
     "@capacitor/preferences": "^5.0.6",
