modified:   android/app/src/main/AndroidManifest.xml 	modified:   src/app/pages/crearlibro/crearlibro.page.ts 	modified:   src/app/pages/home/home.module.ts 	modified:   src/app/pages/home/home.page.html 	modified:   src/app/pages/home/home.page.ts 	modified:   src/app/pages/mapa/mapa.component.html 	modified:   src/app/pages/mapa/mapa.component.scss 	modified:   src/app/pages/mapa/mapa.component.ts 	modified:   src/app/pages/mapa/mapa.module.ts 	modified:   src/app/pages/perfil/modal-libro/modal-libro.page.ts 	modified:   src/app/pages/perfil/perfil.page.html 	modified:   src/app/pages/perfil/perfil.page.scss 	modified:   src/app/pages/perfil/perfil.page.ts 	modified:   src/app/pages/signup/signup.module.ts 	modified:   src/app/pages/signup/signup.page.html 	modified:   src/app/pages/signup/signup.page.ts 	modified:   src/app/services/auth.service.ts 	modified:   src/app/services/googlemaps.service.ts 	modified:   src/app/services/libros.service.ts 	modified:   src/app/services/photo.service.ts 	modified:   src/app/services/usuaris.service.ts 	modified:   src/environments/environment.prod.ts 	modified:   src/environments/environment.ts 	modified:   src/index.html

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -31,8 +31,12 @@
             android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/file_paths"></meta-data>
+                android:resource="@xml/file_paths">
+            </meta-data>
+             <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyBZDTQ4N0oN9lzp4A73V6cMj8qTU0Wzhjs"/>
+        
         </provider>
+        
     </application>
 
     <!-- Permissions -->
