--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
+      <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyBZDTQ4N0oN9lzp4A73V6cMj8qTU0Wzhjs"/>
         <activity
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale|smallestScreenSize|screenLayout|uiMode"
             android:name=".MainActivity"
@@ -34,15 +34,15 @@
                 android:resource="@xml/file_paths">
             </meta-data>
              <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyBZDTQ4N0oN9lzp4A73V6cMj8qTU0Wzhjs"/>
-        
+
         </provider>
-        
+
     </application>
 
     <!-- Permissions -->
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />  
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-feature android:name="android.hardware.location.gps" />
 </manifest>
